{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 23,
  "lineage": "af5f8357-b707-d405-c20d-c0f7c29adcb3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076c7acfc9e8ee57d",
            "arn": "arn:aws:ec2:us-east-1:683354204817:instance/i-07fa94c3173ba4ffa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07fa94c3173ba4ffa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0afcbcd8cf41f23fb",
            "private_dns": "ip-10-20-20-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.9",
            "public_dns": "ec2-54-234-28-35.compute-1.amazonaws.com",
            "public_ip": "54.234.28.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0076946b737db8c39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e736d85420643bf8",
            "tags": {
              "Name": "web-server-1"
            },
            "tags_all": {
              "Name": "web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ca1c06b1cc8d579"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web-server",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_ami.amazon_linux_2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076c7acfc9e8ee57d",
            "arn": "arn:aws:ec2:us-east-1:683354204817:instance/i-01c17cef67c36215d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c17cef67c36215d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ad4f832f8d90fa6e",
            "private_dns": "ip-10-20-20-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.20",
            "public_dns": "ec2-54-226-218-47.compute-1.amazonaws.com",
            "public_ip": "54.226.218.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a4a27426f29f9465",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0003a1c4419591835",
            "tags": {
              "Name": "web-server-2"
            },
            "tags_all": {
              "Name": "web-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ca1c06b1cc8d579"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web-server",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683354204817:internet-gateway/igw-03fb4c64e8c007b71",
            "id": "igw-03fb4c64e8c007b71",
            "owner_id": "683354204817",
            "tags": {
              "Name": "Application-lb-gateway"
            },
            "tags_all": {
              "Name": "Application-lb-gateway"
            },
            "vpc_id": "vpc-0b80eb7a520709e5a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:683354204817:loadbalancer/app/application-lb/1b347ab619c7edd9",
            "arn_suffix": "app/application-lb/1b347ab619c7edd9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-lb-1736093722.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:683354204817:loadbalancer/app/application-lb/1b347ab619c7edd9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bf9ef794d69cf767"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0003a1c4419591835"
              },
              {
                "subnet_id": "subnet-0e736d85420643bf8"
              }
            ],
            "subnets": [
              "subnet-0003a1c4419591835",
              "subnet-0e736d85420643bf8"
            ],
            "tags": {
              "Environment": "application-lb",
              "Name": "Application-lb"
            },
            "tags_all": {
              "Environment": "application-lb",
              "Name": "Application-lb"
            },
            "vpc_id": "vpc-0b80eb7a520709e5a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:683354204817:listener/app/application-lb/1b347ab619c7edd9/78be1a2c6df02046",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:683354204817:targetgroup/application-lb-tg/f51bf5d802335af3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:683354204817:listener/app/application-lb/1b347ab619c7edd9/78be1a2c6df02046",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:683354204817:loadbalancer/app/application-lb/1b347ab619c7edd9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-lb",
            "aws_lb_target_group.alb-target-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:683354204817:targetgroup/application-lb-tg/f51bf5d802335af3",
            "arn_suffix": "targetgroup/application-lb-tg/f51bf5d802335af3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:683354204817:targetgroup/application-lb-tg/f51bf5d802335af3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "application-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b80eb7a520709e5a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:683354204817:targetgroup/application-lb-tg/f51bf5d802335af3-20231108040440759300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:683354204817:targetgroup/application-lb-tg/f51bf5d802335af3",
            "target_id": "i-07fa94c3173ba4ffa"
          },
          "dependencies": [
            "aws_instance.web-server",
            "aws_lb_target_group.alb-target-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:683354204817:targetgroup/application-lb-tg/f51bf5d802335af3-20231108040440874400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:683354204817:targetgroup/application-lb-tg/f51bf5d802335af3",
            "target_id": "i-01c17cef67c36215d"
          },
          "dependencies": [
            "aws_instance.web-server",
            "aws_lb_target_group.alb-target-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03fb4c64e8c007b71",
            "id": "r-rtb-0bbb89cc3c6b870cb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbb89cc3c6b870cb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this-igw",
            "aws_route_table.this-rt",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683354204817:route-table/rtb-0bbb89cc3c6b870cb",
            "id": "rtb-0bbb89cc3c6b870cb",
            "owner_id": "683354204817",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fb4c64e8c007b71",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Application-lb-route-table"
            },
            "tags_all": {
              "Name": "Application-lb-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b80eb7a520709e5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd1a8bf45ef6bb14",
            "route_table_id": "rtb-0bbb89cc3c6b870cb",
            "subnet_id": "subnet-0e736d85420643bf8"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f4c8116e52e005f",
            "route_table_id": "rtb-0bbb89cc3c6b870cb",
            "subnet_id": "subnet-0003a1c4419591835"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683354204817:security-group/sg-0bf9ef794d69cf767",
            "description": "Application load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf9ef794d69cf767",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "683354204817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-security-group"
            },
            "tags_all": {
              "Name": "alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b80eb7a520709e5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683354204817:security-group/sg-06ca1c06b1cc8d579",
            "description": "allow http traffic from alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ca1c06b1cc8d579",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "traffic from alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bf9ef794d69cf767"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_access",
            "name_prefix": "",
            "owner_id": "683354204817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-sg"
            },
            "tags_all": {
              "Name": "web-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b80eb7a520709e5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683354204817:subnet/subnet-0e736d85420643bf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.20.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e736d85420643bf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "683354204817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-lb-private"
            },
            "tags_all": {
              "Name": "Application-lb-private"
            },
            "vpc_id": "vpc-0b80eb7a520709e5a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683354204817:subnet/subnet-0003a1c4419591835",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.20.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0003a1c4419591835",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "683354204817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-lb-private"
            },
            "tags_all": {
              "Name": "Application-lb-private"
            },
            "vpc_id": "vpc-0b80eb7a520709e5a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683354204817:vpc/vpc-0b80eb7a520709e5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.20.0/26",
            "default_network_acl_id": "acl-09c30c2b816490f8b",
            "default_route_table_id": "rtb-048f24c1d22391d78",
            "default_security_group_id": "sg-03200311b4a87fb18",
            "dhcp_options_id": "dopt-0649e62882d1a99d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b80eb7a520709e5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048f24c1d22391d78",
            "owner_id": "683354204817",
            "tags": {
              "Name": "Application-lb"
            },
            "tags_all": {
              "Name": "Application-lb"
            }
          }
        }
      ]
    }
  ]
}